# ml_lab1

./: CMakeLists.txt  README.md
scripts/: digits.py  knn.py  plot_feature.py  results_11_chebyshev  results_11_manhattan  results_15_chebyshev  results_15_minkowski  results_1_chebyshev  results_1_minkowski  results_3_chebyshev  results_3_manhattan  results_5_chebyshev  results_5_manhattan  results_7_chebyshev  results_7_euclidean  results_9_chebyshev  results_9_euclidean  results_time  results_time_bkp
scripts/features/: f_9-1-46
